feat: 針對需求調整 modal & api
1. 修正 food api 回傳資料
2. 調整 info 4支 api > 增加篩選條件
3. 調整 食物計算 modal > 以符合需求
4. 調整 api swagger 註解
