# routes/info.js
@@ -10,6 +10,19 @@ router.get(
   /*  #swagger.tags = ['Info']
     #swagger.summary = '取得所有鸚鵡資料'
     #swagger.description = '取得所有鸚鵡資料'
+    #swagger.parameters['obj'] = {
+      in: 'query',
+      name: 'size',
+      description: '體型',
+      enum: ['小型', '中型', '大型'],
+      required: false
+    }
+    #swagger.parameters['obj'] = {
+      in: 'query',
+      name: 'keyword',
+      description: '關鍵字',
+      required: false
+    }
     */
 );
 
@@ -20,6 +33,12 @@ router.get(
   /*  #swagger.tags = ['Info']
         #swagger.summary = '取得所有不可食用食物資料'
         #swagger.description = '取得所有不可食用食物資料'
+        #swagger.parameters['obj'] = {
+          in: 'query',
+          name: 'keyword',
+          description: '關鍵字',
+          required: false
+        }
     */
 );
 
@@ -30,6 +49,12 @@ router.get(
   /*  #swagger.tags = ['Info']
         #swagger.summary = '取得所有可食用食物資料'
         #swagger.description = '取得所有可食用食物資料'
+        #swagger.parameters['obj'] = {
+          in: 'query',
+          name: 'keyword',
+          description: '關鍵字',
+          required: false
+        }
     */
 );
 
@@ -40,6 +65,18 @@ router.get(
   /*  #swagger.tags = ['Info']
         #swagger.summary = '取得所有醫院資料'
         #swagger.description = '取得所有醫院資料'
+        #swagger.parameters['obj'] = {
+          in: 'query',
+          name: 'keyword',
+          description: '關鍵字',
+          required: false
+        }
+        #swagger.parameters['obj'] = {
+          in: 'query',
+          name: 'region',
+          description: '地區',
+          required: false
+        }
     */
 );
 
